[workspace]
resolver = "2"
members = ["firewall", "firewall-ebpf"]
default-members = ["firewall"]

[workspace.dependencies]
anyhow = { version = "1", default-features = false }
aya = { version = "0.13.1", default-features = false }
aya-build = { version = "0.1.2", default-features = false }
aya-ebpf = { version = "0.1.1", default-features = false }
aya-log = { version = "0.2.1", default-features = false }
aya-log-ebpf = { version = "0.1.1", default-features = false }
clap = { version = "4.5.29", features = ["derive" ] }
env_logger = { version = "0.11.6" }
log = { version = "0.4.25" }
network-types = { version = "0.0.7" }
tokio = { version = "1.43.0" }
which = { version = "6.0.0", default-features = false }

[profile.release.package.firewall-ebpf]
debug = 2
codegen-units = 1
