[package]
name = "firewall"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
aya = { workspace = true }
aya-log = { workspace = true }
firewall-common = { path = "../firewall-common" }

[dev-dependencies]
clap = { workspace = true}
env_logger = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[build-dependencies]
anyhow = { workspace = true }
aya-build = { workspace = true }
firewall-ebpf = { path = "../firewall-ebpf" }
